# VIL_API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1b5b6c738ae4_add_universal_id_to_articles.py  6c66f78feb4b_add_vil_id_column_to_all_tables.py  856a722a63a5_update_models_to_match_new_schema.py  c0d22a049581_add_unique_index_to_vil_id.py  ed5f5a51bb29_create_initial_tables_for_all_models.py
app/core/: config.py  logging_config.py
app/routers/: article.py  budgets_union.py  ce.py  cgst.py  cu.py  dgft.py  features.py  generic_router_factory.py  router_config.py  sgst.py  st.py  vat.py
app/schemas/: article_schema.py  budgets_union_schema.py  ce_schema.py  cgst_schema.py  common.py  cu_schema.py  dgft_schema.py  features_schema.py  sgst_schema.py  st_schema.py  vat_schema.py
app/services/: article_service.py  base.py  budgets_union_service.py  ce_service.py  cgst_service.py  cu_service.py  dgft_service.py  features_service.py  sgst_service.py  st_service.py  vat_service.py
database/: db_session.py  docker-compose.yaml
database/crud/: article_crud.py  articles_crud.py  base.py  budgets_union_crud.py  ce_crud.py  cgst_crud.py  cu_crud.py  dgft_crud.py  features_crud.py  sgst_crud.py  st_crud.py  vat_crud.py
database/models/: __init__.py  article_model.py  articles_model.py  budgets_union_model.py  ce_model.py  cgst_model.py  cu_model.py  dgft_model.py  features_model.py  sgst_model.py  st_model.py  vat_model.py
